syntax = "proto3";

service Forwarder {
    rpc HandleImage (Image) returns (ImageResponse) {}
//    rpc ImageHandleStream(stream Image) returns (ImageResponse) {}
}

message Image {
    bytes image = 1;
    string message = 2;
}

message ImageResponse {}
